[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
